--- a/Project1.ipynb
+++ b/Project1.ipynb
@@ -341,27 +341,17 @@
       "\n",
       "Verifying signed file \"message1.txt.signed\"...\n",
       "Signature successfully verified!\n",
-      "\n",
-      "Signed message tampered; now reads: The FitnessGram Pacer Test is a multistage aerobic capacity test that progressively gets more difficult as it continues \n",
-      "\n",
-      "Verifying signed file \"message1.txt.signed\"...\n",
-      "Signature has FAILED verification.\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# First message example\n",
+    "# Correct message example\n",
     "\n",
     "# Sign message\n",
     "CPSC_435_Project1(2, \"s\", \"message1.txt\")\n",
     "\n",
     "# Verify valid message\n",
-    "CPSC_435_Project1(2, \"d\", \"message1.txt.signed\")\n",
-    "\n",
-    "# Attempt to verify tampered message\n",
-    "fakeMessage = \"The FitnessGram Pacer Test is a multistage aerobic capacity test that progressively gets more difficult as it continues\"\n",
-    "tamper(\"message1.txt.signed\", fakeMessage)\n",
     "CPSC_435_Project1(2, \"d\", \"message1.txt.signed\")"
    ]
   },
@@ -378,30 +368,26 @@
       "Message: There once was a ship that put to see and the name of that ship was a Billy O' Tea!\n",
       "Message \"message2.txt\" signed!\n",
       "\n",
-      "Verifying signed file \"message2.txt.signed\"...\n",
-      "Signature successfully verified!\n",
-      "\n",
       "Signed message tampered; now reads: There once was a ship that put to see and the name of that ship was a Jolly Sardine! \n",
       "\n",
-      "Verifying signed file \"message1.txt.signed\"...\n",
+      "Verifying signed file \"message2.txt.signed\"...\n",
       "Signature has FAILED verification.\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# Second message example\n",
+    "# Tampered message example\n",
     "\n",
     "# Sign message\n",
     "CPSC_435_Project1(2, \"s\", \"message2.txt\")\n",
     "\n",
-    "# Verify valid message\n",
-    "CPSC_435_Project1(2, \"d\", \"message2.txt.signed\")\n",
-    "\n",
-    "# Attempt to verify tampered message\n",
+    "# Tamper with message\n",
     "fakeMessage = \"There once was a ship that put to see and the name of that ship was a Jolly Sardine!\"\n",
-    "tamper(\"message1.txt.signed\", fakeMessage)\n",
-    "CPSC_435_Project1(2, \"d\", \"message1.txt.signed\")"
+    "tamper(\"message2.txt.signed\", fakeMessage)\n",
+    "\n",
+    "# Verify tampered message\n",
+    "CPSC_435_Project1(2, \"d\", \"message2.txt.signed\")"
    ]
   }
  ],
