Refactor and rename Extended_Euclid()

--- a/Project1.ipynb
+++ b/Project1.ipynb
@@ -41,6 +41,7 @@
     "        return not ((potentialPrime % 2) == 0)\n",
     "    \n",
     "    # perform test iterations\n",
+    "    # a composite number has a 0.015% chance of being called prime per iteration\n",
     "    for _ in range(iterations):\n",
     "        a = rand.randint(2, potentialPrime - 2)\n",
     "        if pow(a, potentialPrime - 1, potentialPrime) != 1:\n",
@@ -95,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "53307ef2-bc73-4921-b026-fa2a8df4ef91",
+   "id": "828d2eed-b2ff-4434-bad6-21797badb940",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,19 +105,16 @@
     "# @param b Second number to be compared\n",
     "# @return gcd Greatest common divisor of a and b\n",
     "# @return x, y Bezout coefficients\n",
-    "def gcd_with_bezout(a, b):\n",
+    "def Extended_Euclid(a, b):\n",
     "    # base case\n",
-    "    if a == 0:\n",
-    "        return b, 0, 1\n",
+    "    if (b == 0):\n",
+    "        return a, 1, 0\n",
     "\n",
     "    # recursion\n",
-    "    gcd, x1, y1 = gcd_with_bezout(b % a, a)\n",
+    "    u, v, w = Extended_Euclid(b, a%b)\n",
     "\n",
-    "    # update bezout coefficients\n",
-    "    x = y1 - (b//a) * x1\n",
-    "    y = x1\n",
-    "    \n",
-    "    return gcd, x, y"
+    "    # update bezout and return\n",
+    "    return u, w, v-(a//b)*w"
    ]
   },
   {
@@ -134,13 +132,13 @@
     "    save_value_pair(\"p_q\", p, q)\n",
     "    \n",
     "    # Solve for lambda(n)\n",
-    "    temp, _, _ = gcd_with_bezout(p-1, q-1)\n",
+    "    temp, _, _ = Extended_Euclid(p-1, q-1)\n",
     "    lambda_n = ((p-1) * (q-1)) // temp\n",
     "\n",
     "    # Solve for public/private keys\n",
     "    n = p*q\n",
     "    e = pow(2, 16) + 1\n",
-    "    _, _, d = gcd_with_bezout(lambda_n, e)\n",
+    "    _, _, d = Extended_Euclid(lambda_n, e)\n",
     "\n",
     "    # Save keys\n",
     "    save_value_pair(\"e_n\", e, n)\n",
@@ -389,6 +387,14 @@
     "# Verify tampered message\n",
     "CPSC_435_Project1(2, \"d\", \"message2.txt.signed\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d453a8d-7af1-46bc-a842-5ada5490c21a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
